minor modifications like secheduled super user reset
